--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "wish-server",
   "version": "1.0.0",
   "description": "Simple backend for the WISH Project",
-  "main": "src/index.js",
+  "main": "src/index.ts",
+  "now": {
+    "alias": "wish-server",
+    "env": {
+      "CORS_HOST": "https://dhleong.github.io",
+      "VAPID_PUBLIC_KEY": "@wish-vapid-public-key",
+      "VAPID_PRIVATE_KEY": "@wish-vapid-private-key"
+    }
+  },
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "deploy": "now --public && now alias",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Leong",
@@ -13,23 +23,27 @@
     "type": "git",
     "url": "https://github.com/dhleong/wish-server"
   },
+  "dependencies": {
+    "@koa/cors": "^2.2.2",
+    "koa": "^2.5.3",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "typescript": "^3.1.3",
+    "web-push": "^3.3.3",
+    "winston": "^3.1.0"
+  },
   "devDependencies": {
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.32",
+    "@types/koa-static": "^4.0.0",
+    "@types/koa__cors": "^2.2.3",
     "@types/node": "^10.11.7",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "ts-node-dev": "^1.0.0-pre.30",
     "tslint": "^5.11.0"
-  },
-  "dependencies": {
-    "koa": "^2.5.3",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "typescript": "^3.1.3",
-    "web-push": "^3.3.3",
-    "winston": "^3.1.0"
   }
 }
