--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "alias": "wish-server",
     "env": {
       "CORS_HOST": "https://dhleong.github.io",
+      "GAPI_PUSH_URL": "https://wish-server.now.sh/v1/push/send",
       "VAPID_PUBLIC_KEY": "@wish-vapid-public-key",
-      "VAPID_PRIVATE_KEY": "@wish-vapid-private-key"
+      "VAPID_PRIVATE_KEY": "@wish-vapid-private-key",
+      "REDIS_ENDPOINT": "@wish-redis-endpoint",
+      "REDIS_PASSWORD": "@wish-redis-password"
     }
   },
   "scripts": {
+    "build": "tsc -p .",
     "dev": "ts-node-dev src/index.ts",
     "deploy": "now --public && now alias",
-    "start": "ts-node src/index.ts",
+    "lint": "tslint -p .",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Leong",
@@ -25,11 +30,16 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "@types/uuid": "^3.4.4",
+    "googleapis": "^34.0.0",
+    "handy-redis": "^1.5.1",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "redis": "^2.8.0",
     "typescript": "^3.1.3",
+    "uuid": "^3.3.2",
     "web-push": "^3.3.3",
     "winston": "^3.1.0"
   },
@@ -40,6 +50,7 @@
     "@types/koa-static": "^4.0.0",
     "@types/koa__cors": "^2.2.3",
     "@types/node": "^10.11.7",
+    "@types/redis": "^2.8.7",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
