--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   "dependencies": {
     "@koa/cors": "^2.2.2",
     "@types/uuid": "^3.4.4",
+    "darkside-sse": "^1.0.1",
     "googleapis": "^34.0.0",
     "handy-redis": "^1.5.1",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "lightside": "^1.0.0",
     "redis": "^2.8.0",
     "typescript": "^3.1.3",
     "uuid": "^3.3.2",
