Begin building out services for new push protocol
After thinking about it for a while, handling push notifications for
changes from a 3rd party service is very tricky. Dropping web-push is
definitely the right move, because there's already quite a bit of
complexity here.

In particular, we definitely have to create the watches on the server
in order to prevent spoofing from malicious users—they wouldn't be able
to actually *modify* anything, and there are steps the server could take
to prevent them from tricking other clients into refreshing excessively,
but in order to avoid getting potentially hundreds of duplicate "file
changed" notifications for the same file (and accidentally DDOSing ourselves),
we would like to request just *one* person (or, if this is problematic,
just a few people) actually be in charge of watching the file. If we
trust all the clients when they say they have access to do this, some
bad actors could *claim* to be able to watch a file, then just sit on
their hands.

So, we try to create watches on the server, where we can know if they
actually have access or not.

Right now there's still an opportunity if a bad actor randomly gets
selected when the original watcher leaves (since we don't store the auth
and just ask that they send it back) but that seems unlikely. If we see
this happening a lot then we can request multiple people try to watch a
file, and there's de-duping logic in place during a race.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "scripts": {
     "build": "tsc -p .",
+    "check": "npm run lint && npm test",
     "dev": "ts-node-dev src/index.ts",
     "deploy": "now --public && now alias",
     "lint": "tslint -p .",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'test/**/*-test.ts'"
   },
   "author": "Daniel Leong",
   "license": "MIT",
@@ -30,7 +31,6 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.2",
-    "@types/uuid": "^3.4.4",
     "darkside-sse": "^1.0.1",
     "googleapis": "^34.0.0",
     "handy-redis": "^1.5.1",
@@ -46,13 +46,16 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.6",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.32",
     "@types/koa-static": "^4.0.0",
     "@types/koa__cors": "^2.2.3",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.7",
     "@types/redis": "^2.8.7",
+    "@types/uuid": "^3.4.4",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
