Generate Token with JWT to prevent spoofing
Lets us securely embed the watched file ID

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "CORS_HOST": "https://dhleong.github.io",
       "GAPI_PUSH_URL": "https://wish-server.now.sh/v1/push/send",
       "GAPI_OAUTH_ID": "@wish-gapi-oauth-id",
+      "JWT_SECRET": "@wish-jwt-secret",
       "VAPID_PUBLIC_KEY": "@wish-vapid-public-key",
       "VAPID_PRIVATE_KEY": "@wish-vapid-private-key",
       "REDIS_ENDPOINT": "@wish-redis-endpoint",
@@ -32,10 +33,12 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "@types/jsonwebtoken": "^7.2.8",
     "darkside-sse": "^1.0.2",
     "google-auth-library": "^2.0.0",
     "googleapis": "^34.0.0",
     "handy-redis": "^1.5.1",
+    "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.3",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
