--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.6",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/koa": "^2.0.46",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.32",
@@ -63,6 +64,7 @@
     "@types/uuid": "^3.4.4",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
     "ts-node-dev": "^1.0.0-pre.30",
     "tslint": "^5.11.0"
