--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,32 @@
 language: node_js
 node_js:
     - "8"
-script:
-    - npm run check && npm run build
 services:
     - redis-server
+
+cache:
+    directories:
+        - "node_modules"
+
+script:
+    - npm run build
+
+# deploy to now:
+before_deploy:
+    - npm install now --no-save
+
+deploy:
+    # just deploy (for convenient testing) when not on master
+    - provider: script
+      script: now --public --token $NOW_TOKEN
+      skip_cleanup: true
+      on:
+          all_branches: true
+          master: false
+
+    # deploy + alias from master
+    - provider: script
+      script: npm run publish:ci
+      skip_cleanup: true
+      on:
+          master: true
