--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "koa-static": "^5.0.0",
     "lightside": "^1.0.0",
     "redis": "^2.8.0",
+    "socket.io": "^2.1.1",
     "typescript": "^3.1.3",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
@@ -65,6 +66,8 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.7",
     "@types/redis": "^2.8.7",
+    "@types/socket.io": "^2.1.0",
+    "@types/socket.io-redis": "^1.0.25",
     "@types/uuid": "^3.4.4",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
