--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lightside": "^1.0.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
+    "socket.io-adapter": "^1.1.1",
     "typescript": "^3.1.3",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
