--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lightside": "^1.0.0",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
+    "socket.io-adapter": "^1.1.1",
     "typescript": "^3.1.3",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
@@ -67,12 +68,14 @@
     "@types/node": "^10.11.7",
     "@types/redis": "^2.8.7",
     "@types/socket.io": "^2.1.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/socket.io-redis": "^1.0.25",
     "@types/uuid": "^3.4.4",
     "@types/web-push": "^3.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.2.0",
+    "socket.io-client": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.30",
     "tslint": "^5.11.0"
   }
